# optix

./: CMakeLists.txt
CMake/: FindOptiX7.cmake  PTXUtilities.cmake
common/: common.cpp  common.h  vec_func.cuh
dynamicGeometry/: CMakeLists.txt
dynamicGeometry/include/: dynamicGeometry.h  params.hpp
dynamicGeometry/src/: dynamicGeometry.cpp  dynamicGeometry.cu  main.cpp
triangle/: CMakeLists.txt
triangle/include/: params.hpp  triangle.hpp  utils.h
triangle/src/: main.cpp  triangle.cpp  triangle.cu  utils.cpp
